# LuaGL

./: CMakeLists.txt  LICENSE  README.md  history.txt  luagl-1-02.rockspec  readme.txt
include/: LuaGL.h  LuaGlu.h  LuaGlut.h
samples/: loadLuaGL.lua  nehe_01.lua  nehe_02.lua  nehe_03.lua  nehe_04.lua  nehe_05.lua  nehe_06.lua  nehe_07.lua  viewTGA.lua
samples/data/: smallTest.tga
source/: LuaGL.c  LuaGLAux.c  LuaGLAux.h  LuaGlu.c  LuaGlut.c
tests/: LuaGLTest.lua  TestTools.lua  luaunit.lua
