CMAKE_MINIMUM_REQUIRED(VERSION 2.6 FATAL_ERROR)
CMAKE_POLICY(VERSION 2.6)

SET(CMAKE_VERBOSE_MAKEFILE false)

FIND_PACKAGE(Torch REQUIRED)
FIND_PACKAGE(GLUT REQUIRED)
FIND_PACKAGE(OpenGL REQUIRED)

FILE(GLOB_RECURSE src source/*.c)
FILE(GLOB_RECURSE hdr source/*.h)
FILE(GLOB luasrc *.lua)

INCLUDE_DIRECTORIES(${GLUT_INCLUDE_DIRS})
LINK_DIRECTORIES(${GLUT_LIBRARY_DIRS})
ADD_DEFINITIONS(${GLUT_DEFINITIONS})

INCLUDE_DIRECTORIES(${OpenGL_INCLUDE_DIRS})
LINK_DIRECTORIES(${OpenGL_LIBRARY_DIRS})
ADD_DEFINITIONS(${OpenGL_DEFINITIONS})

INCLUDE_DIRECTORIES(source)
INCLUDE_DIRECTORIES(include)

SET(LuaGLSource source/LuaGL.c source/LuaGLAux.c)

ADD_TORCH_PACKAGE(LuaGL "${LuaGLSource}" "" "LuaGL wrapper.")
TARGET_LINK_LIBRARIES(LuaGL luaT TH ${OPENGL_LIBRARIES} ${GLUT_LIBRARY})
INSTALL(FILES "README.md" DESTINATION "${Torch_INSTALL_LUA_PATH_SUBDIR}/README.md")

SET(LuaGlutSource source/LuaGlut.c)
ADD_TORCH_PACKAGE(LuaGlut "${LuaGlutSource}" "" "LuaGL GLUT wrapper.")
TARGET_LINK_LIBRARIES(LuaGlut luaT TH ${OPENGL_LIBRARIES} ${GLUT_LIBRARY})
INSTALL(FILES "README.md" DESTINATION "${Torch_INSTALL_LUA_PATH_SUBDIR}/README.md")

SET(LuaGluSource source/LuaGlu.c source/LuaGLAux.c)
ADD_TORCH_PACKAGE(LuaGlu "${LuaGluSource}" "" "LuaGL GLU wrapper.")
TARGET_LINK_LIBRARIES(LuaGlu luaT TH ${OPENGL_LIBRARIES} ${GLUT_LIBRARY})
INSTALL(FILES "README.md" DESTINATION "${Torch_INSTALL_LUA_PATH_SUBDIR}/README.md")

